changes on list items

--- a/apply.html
+++ b/apply.html
@@ -22,7 +22,7 @@
                     <!-- Site branding -->
                     <div class="cuee4 coapw">
                         <!-- Logo -->
-                        <a class="c8ydg"  href="index-2.html" aria-label="Cruip">
+                        <a class="c8ydg"  href="index.html" aria-label="Cruip">
 
                             <div >
                                 <img width="60" height="60" src="./images/wallx.jpg" alt="wallx" />
@@ -85,26 +85,27 @@
 
                                 <div class="cz8g9">
                                     <ul class="c2a4l ct22v c4uvm c23lu">
+                                        
                                         <li class="cim3e cfgg9 cuo55">
                                             <svg class="c3tn4 coapw" width="20" height="20" xmlns="http://www.w3.org/2000/svg">
                                                 <circle class="cie0e" cx="10" cy="10" r="10"></circle>
                                                 <path class="c668d" d="M15.335 7.933 14.87 7c-4.025 1.167-6.067 3.733-6.067 3.733l-1.867-1.4-.933.934L8.802 14c2.158-4.025 6.533-6.067 6.533-6.067Z"></path>
                                             </svg>
-                                            <span>Create cards that work exactly as you configure them</span>
+                                            <span>Automate Savings</span>
                                         </li>
                                         <li class="cim3e cfgg9 cuo55">
                                             <svg class="c3tn4 coapw" width="20" height="20" xmlns="http://www.w3.org/2000/svg">
                                                 <circle class="cie0e" cx="10" cy="10" r="10"></circle>
                                                 <path class="c668d" d="M15.335 7.933 14.87 7c-4.025 1.167-6.067 3.733-6.067 3.733l-1.867-1.4-.933.934L8.802 14c2.158-4.025 6.533-6.067 6.533-6.067Z"></path>
                                             </svg>
-                                            <span>Focus critical resources on your core business</span>
+                                            <span>P2P for Corporates.</span>
                                         </li>
                                         <li class="cim3e cfgg9 cuo55">
                                             <svg class="c3tn4 coapw" width="20" height="20" xmlns="http://www.w3.org/2000/svg">
                                                 <circle class="cie0e" cx="10" cy="10" r="10"></circle>
                                                 <path class="c668d" d="M15.335 7.933 14.87 7c-4.025 1.167-6.067 3.733-6.067 3.733l-1.867-1.4-.933.934L8.802 14c2.158-4.025 6.533-6.067 6.533-6.067Z"></path>
                                             </svg>
-                                            <span>Make real-time decisions on charges and spendings.</span>
+                                            <span>Fast Payment.</span>
                                         </li>
                                     </ul>
                                 </div>
