--- a/apply.html
+++ b/apply.html
@@ -157,15 +157,15 @@
                                         <form action="https://getform.io/f/2fed2d3e-1f36-4264-987a-d75a23816d4a" method="POST">
                                             <div class="ch1v7">
                                                 <div class="cu4zi cligg c3qtg ch1on">
-                                                    <label class="cjk2i cwoq0 c8ydg cuo55 ccpqs camah cfjf2 cb4io c734n" for="first-name">Name</label>
+                                                    <label class="cjk2i cwoq0 c8ydg cuo55 ccpqs camah cfjf2 cb4io c734n" for="Full-Name">Full Name</label>
                                                     <div class="coapw ckww4 cdrzy">
-                                                        <input id="first-name" name="First_Name" class="c8zfz cb2cq cmcn5 ccpqs" type="text" placeholder="Patrick" required="">
+                                                        <input id="first-name" name="Full_Name" class="c8zfz cb2cq cmcn5 ccpqs" type="text" placeholder="Patrick" required="">
                                                     </div>
                                                 </div>
                                                 <div class="cu4zi cligg c3qtg ch1on">
-                                                    <label class="cjk2i cwoq0 c8ydg cuo55 ccpqs camah cfjf2 cb4io c734n" for="last-name">Phone</label>
+                                                    <label class="cjk2i cwoq0 c8ydg cuo55 ccpqs camah cfjf2 cb4io c734n" for="phone">Phone Number</label>
                                                     <div class="coapw ckww4 cdrzy">
-                                                        <input id="last-name" name="Last_Name" class="c8zfz cb2cq cmcn5 ccpqs" type="number" placeholder="enter phone number" required="">
+                                                        <input id="phone" name="Phone_Number" class="c8zfz cb2cq cmcn5 ccpqs" type="number" placeholder="enter phone number" required="">
                                                     </div>
                                                 </div>
                                                 <div class="cu4zi cligg c3qtg ch1on">
@@ -177,7 +177,7 @@
                                                 <div class="cu4zi cligg c3qtg ch1on">
                                                     <label class="cjk2i cwoq0 c8ydg cuo55 ccpqs camah cfjf2 cb4io c734n" for="website">Business Name</label>
                                                     <div class="coapw ckww4 cdrzy">
-                                                        <input id="website" name="Company_Name" class="c8zfz cb2cq cmcn5 ccpqs" type="text" placeholder="ABC Company" required="">
+                                                        <input id="website" name="Business_Name" class="c8zfz cb2cq cmcn5 ccpqs" type="text" placeholder="ABC Company" required="">
                                                     </div>
                                                 </div>
                                                 <div class="cu4zi cligg c3qtg ch1on">
