ui changes three

--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@
                                     <!-- 1st item -->
                                     <div class="cotx2 ckjl3 ch62p cdjn1 c34lp cmhky cyx82 cwwxq cf208 cilu6 cxd6l c8zdl">
                                         <div class="cq1sm">
-                                            <div class="cjtob c9wpg cfgg9 cmhg9 cog40 c8dbe cim3e cqfz5 c6ix5">1</div>
+                                            <div class="cjtob c9wpg cfgg9 cmhg9 cog40 c8dbe cim3e cqfz5 c6ix5 steps">1</div>
                                         </div>
                                         <h4 class="cr4vv c8dbe cn6zh cynqs">Download Our App</h4>
                                         <p class="c6rdy">Download Wallx on Google PlayStore and Apple App Store. Make payments with ease.</p>
@@ -533,7 +533,7 @@
                                     <!-- 2nd item -->
                                     <div class="cotx2 ckjl3 ch62p cdjn1 c34lp cmhky cyx82 cwwxq cf208 cilu6 cxd6l c8zdl">
                                         <div class="cq1sm">
-                                            <div class="cjtob c9wpg cfgg9 cmhg9 cog40 c8dbe cim3e cqfz5 c6ix5">2</div>
+                                            <div class="cjtob c9wpg cfgg9 cmhg9 cog40 c8dbe cim3e cqfz5 c6ix5 steps">2</div>
                                         </div>
                                         <h4 class="cr4vv c8dbe cn6zh cynqs">Create a Profile</h4>
                                         <p class="c6rdy">Create a secure profile within minutes and start saving.</p>
@@ -542,7 +542,7 @@
                                     <!-- 3rd item -->
                                     <div class="cotx2 ckjl3 ch62p cdjn1 c34lp cmhky cyx82 cwwxq cf208 cilu6 cxd6l c8zdl">
                                         <div class="cq1sm">
-                                            <div class="cjtob c9wpg cfgg9 cmhg9 cog40 c8dbe cim3e cqfz5 c6ix5">3</div>
+                                            <div class="cjtob c9wpg cfgg9 cmhg9 cog40 c8dbe cim3e cqfz5 c6ix5 steps">3</div>
                                         </div>
                                         <h4 class="cr4vv c8dbe cn6zh cynqs">Enjoy Our Tools</h4>
                                         <p class="c6rdy">Automate savings. Peer-to-Peer payments for corporates. Fast and secure. </p>
@@ -886,8 +886,7 @@
                 <!-- Bottom area -->
                 <div class="c0th4 c11ig">
                     <div class="c23lu c3q42 wallx-typo footer">
-                        All Right Reserved  &copy;  Copyright - 2023:  WallX Innovation Inc. is a licensed MSB established in North America and regulated by FINTRAC. WallX provides a savings wallets, secure P2P payment and B2B 
-                        <div>merchant.</div>
+                        All Right Reserved  &copy;  Copyright - 2023:  WallX Innovation Inc. is a licensed MSB established in North America and regulated by FINTRAC. WallX provides a savings wallets, secure P2P payment and a tailor-made business tool for SMB's. Get in Touch with us on: hello@wallx.app
                     </div>
                 </div>
         
