added mailto and sign up link

--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
                                     <!-- Button -->
                                     <div class="c7jfw cs5eq c2jnb czx4s" data-aos="fade-up" data-aos-anchor="[data-aos-id-3]" data-aos-delay="300">
                                         <div>
-                                            <a class="c4kx2 cfgg9 c0bsy c2a4l c0kfj c5bld ck941 cik6c wallx-bgg" href="#0">
+                                            <a class="c4kx2 cfgg9 c0bsy c2a4l c0kfj c5bld ck941 cik6c wallx-bgg" href="apply.html">
                                                 Sign up
                                                 <span class="c9b1l cba20 cwp06 c962e cyswi chi9x ce0e5">
                                                     <svg class="cdbva" width="12" height="10" xmlns="http://www.w3.org/2000/svg">
@@ -463,7 +463,7 @@
                                     <!-- Button -->
                                     <div class="c7jfw cs5eq c2jnb" data-aos="fade-up" data-aos-anchor="[data-aos-id-4]" data-aos-delay="300">
                                         <div>
-                                            <a class="c4kx2 cfgg9 c0bsy c2a4l c0kfj c5bld ck941 cik6c wallx-bgg" href="#0">
+                                            <a class="c4kx2 cfgg9 c0bsy c2a4l c0kfj c5bld ck941 cik6c wallx-bgg" href="apply.html">
                                                 Sign Up
                                                 <span class="c9b1l cba20 cwp06 c962e cyswi chi9x ce0e5">
                                                     <svg class="cdbva" width="12" height="10" xmlns="http://www.w3.org/2000/svg">
@@ -768,7 +768,7 @@
                                         </a>
                                     </div>
                                     <div>
-                                        <a class="c6loh ceobg cd766 cj6g9 cadb5 clo95 cyr0b cfgg9 cr40l c2a4l cr4vv c5bld cxd6l ck941 cb2cq wallx-bgg" href="#0">Get in touch</a>
+                                        <a class="c6loh ceobg cd766 cj6g9 cadb5 clo95 cyr0b cfgg9 cr40l c2a4l cr4vv c5bld cxd6l ck941 cb2cq wallx-bgg" href="mailto:hello@wallx.app">Get in touch</a>
                                     </div>
                                 </div>
                             </div>
