--- a/apply.html
+++ b/apply.html
@@ -91,21 +91,28 @@
                                                 <circle class="cie0e" cx="10" cy="10" r="10"></circle>
                                                 <path class="c668d" d="M15.335 7.933 14.87 7c-4.025 1.167-6.067 3.733-6.067 3.733l-1.867-1.4-.933.934L8.802 14c2.158-4.025 6.533-6.067 6.533-6.067Z"></path>
                                             </svg>
-                                            <span>Automate Savings</span>
+                                            <span>Struggling to Accept International Payments?</span>
                                         </li>
                                         <li class="cim3e cfgg9 cuo55">
                                             <svg class="c3tn4 coapw" width="20" height="20" xmlns="http://www.w3.org/2000/svg">
                                                 <circle class="cie0e" cx="10" cy="10" r="10"></circle>
                                                 <path class="c668d" d="M15.335 7.933 14.87 7c-4.025 1.167-6.067 3.733-6.067 3.733l-1.867-1.4-.933.934L8.802 14c2.158-4.025 6.533-6.067 6.533-6.067Z"></path>
                                             </svg>
-                                            <span>P2P for Corporates.</span>
+                                            <span>Losing Time due to delay P2P Payments with Vendors?</span>
                                         </li>
                                         <li class="cim3e cfgg9 cuo55">
                                             <svg class="c3tn4 coapw" width="20" height="20" xmlns="http://www.w3.org/2000/svg">
                                                 <circle class="cie0e" cx="10" cy="10" r="10"></circle>
                                                 <path class="c668d" d="M15.335 7.933 14.87 7c-4.025 1.167-6.067 3.733-6.067 3.733l-1.867-1.4-.933.934L8.802 14c2.158-4.025 6.533-6.067 6.533-6.067Z"></path>
                                             </svg>
-                                            <span>Fast Payment.</span>
+                                            <span>Struggling to Manage your Business from Anywhere?</span>
+                                        </li>
+                                        <li class="cim3e cfgg9 cuo55">
+                                            <svg class="c3tn4 coapw" width="20" height="20" xmlns="http://www.w3.org/2000/svg">
+                                                <circle class="cie0e" cx="10" cy="10" r="10"></circle>
+                                                <path class="c668d" d="M15.335 7.933 14.87 7c-4.025 1.167-6.067 3.733-6.067 3.733l-1.867-1.4-.933.934L8.802 14c2.158-4.025 6.533-6.067 6.533-6.067Z"></path>
+                                            </svg>
+                                            <span>Trying to Send Instant Money to Family & Friends in Africa?</span>
                                         </li>
                                     </ul>
                                 </div>
